Đã tối ưu các controller chair, room, rowchair, và một phần của booking